fixed graph alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 #correlation_graph {
-    /* margin-top: 20px; */
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
